--- a/security/bypasses.html
+++ b/security/bypasses.html
@@ -27,6 +27,22 @@ footer {
     footer p {
         margin: 0;
     }
+    .under-construction {
+      text-align: center;
+      margin-top: 50px;
+    }
+    .under-construction img {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 20px;
+    }
+    .under-construction h1 {
+      color: orange;
+      font-weight: bold;
+    }
+    .under-construction p {
+      color: #6c757d;
+    }
   </style>
 </head>
 <body>
@@ -55,6 +71,7 @@ footer {
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
               <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
               <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -103,7 +120,7 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Falco Bypasses</h1>
+    <h1 align="center">Falco Bypasses</h1>
     <p>Falco Bypasses represent scenarios where Falco fails to detect certain malicious activities or anomalous behaviors due to technical limitations or specific configurations. These cases highlight opportunities to improve rules and detections to enhance security and reduce risks.</p>
   </div>
 
