--- a/security/challenges.html
+++ b/security/challenges.html
@@ -71,6 +71,7 @@ footer {
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
               <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
               <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -110,7 +111,7 @@ footer {
         <!-- About Link -->
         <ul class="navbar-nav navbar-end">
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="../about.html">About</a>
           </li>
         </ul>
       </div>
