--- a/security/workshop.html
+++ b/security/workshop.html
@@ -66,7 +66,7 @@ footer {
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <!-- Logo -->
-      <a class="navbar-brand" href="#">Falcom4n</a>
+      <a class="navbar-brand" href="../index.html">Falcom4n</a>
 
       <!-- Navbar Toggle -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,16 +78,16 @@ footer {
         <!-- Centered Links -->
         <ul class="navbar-nav navbar-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="infoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="./info/what-is-falco.html">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="./info/why-falco.html">Why Falco</a></li>
-              <li><a class="dropdown-item" href="./info/use-cases.html">Use cases</a></li>
+              <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -95,10 +95,10 @@ footer {
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="rules/community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="rules/custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="rules/vendor-rules.html">Vendor Rules</a></li>
-              <li><a class="dropdown-item" href="rules/irt-alert-rules.html">IRT_Alert Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/irt-alert-rules.html">IRT_Alert Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -106,10 +106,10 @@ footer {
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="metrics/statistics.html">Statistics</a></li>
-              <li><a class="dropdown-item" href="metrics/security-coverage.html">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="metrics/maturity.html">Maturity</a></li>
-              <li><a class="dropdown-item" href="metrics/effectiveness.html">Effectiveness</a></li>
+              <li><a class="dropdown-item" href="../metrics/statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="../metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="../metrics/maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -117,10 +117,10 @@ footer {
               Security
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
-              <li><a class="dropdown-item" href="security/threats.html">Threats</a></li>
-              <li><a class="dropdown-item" href="security/workshop.html">Workshop</a></li>
-              <li><a class="dropdown-item" href="security/bypasses.html">Bypasses</a></li>
-              <li><a class="dropdown-item" href="security/challenges.html">Challenges</a></li>
+              <li><a class="dropdown-item" href="../security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="../security/workshop.html">Workshop</a></li>
+              <li><a class="dropdown-item" href="../security/bypasses.html">Bypasses</a></li>
+              <li><a class="dropdown-item" href="../security/challenges.html">Challenges</a></li>
             </ul>
           </li>
         </ul>
@@ -128,7 +128,7 @@ footer {
         <!-- About Link -->
         <ul class="navbar-nav navbar-end">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="../about.html">About</a>
           </li>
         </ul>
       </div>
@@ -149,16 +149,19 @@ footer {
       <div class="col-md-4 scenario">
         <img src="../assets/malware.webp" alt="Scenario 1">
         <h4>Rootkit infection detection</h4>
+        <h3>2024</h3>
         <p>Detects when sensitive files are accessed outside normal operations.</p>
       </div>
       <div class="col-md-4 scenario">
         <img src="../assets/privilegeEscalation.webp" alt="Scenario 2">
         <h4>Privilege Escalation on hunting activities</h4>
+        <h3>2024</h3>
         <p>Identifies attempts to break out of the container environment.</p>
       </div>
       <div class="col-md-4 scenario">
-        <img src="https://via.placeholder.com/400x300" alt="Scenario 3">
-        <h4>Suply Chain detected</h4>
+        <img src="../assets/supplyChain.webp" alt="Scenario 3">
+        <h4>Suply Chain detection</h4>
+        <h3>2025</h3>
         <p>Monitors and flags attempts to gain unauthorized administrative access.</p>
       </div>
     </div>
