--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -108,6 +108,7 @@
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
               <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
               <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
