--- a/info/what-is-falco.html
+++ b/info/what-is-falco.html
@@ -53,9 +53,9 @@
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="what-is-falco.html">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="why-falco.html">Why Falco</a></li>
-              <li><a class="dropdown-item" href="use-cases.html">Use cases</a></li>
+              <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
