--- a/metrics/effectiveness.html
+++ b/metrics/effectiveness.html
@@ -157,7 +157,7 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Effectiveness</h1>
+    <h1 align="center">Effectiveness</h1>
     <p>The effectiveness of the rules in a security tool like Falco involves evaluating how well the rules detect relevant incidents and prevent false positives. Below is a structured approach to calculate this effectiveness:</p>
   
     <div class="container mt-5">
