--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -129,7 +129,7 @@ footer {
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <!-- Logo -->
-      <a class="navbar-brand" href="#">Falcom4n</a>
+      <a class="navbar-brand" href="../index.html">Falcom4n</a>
 
       <!-- Navbar Toggle -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -148,8 +148,9 @@ footer {
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="#">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="#">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -157,10 +158,10 @@ footer {
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
-              <li><a class="dropdown-item" href="irt-alert-rules.html">IRT_Alert Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/irt-alert-rules.html">IRT_Alert Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -171,6 +172,7 @@ footer {
               <li><a class="dropdown-item" href="../metrics/statistics.html">Statistics</a></li>
               <li><a class="dropdown-item" href="../metrics/security-coverage.html">Security Coverage</a></li>
               <li><a class="dropdown-item" href="../metrics/maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -179,6 +181,7 @@ footer {
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
               <li><a class="dropdown-item" href="../security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="../security/workshop.html">Workshop</a></li>
               <li><a class="dropdown-item" href="../security/bypasses.html">Bypasses</a></li>
               <li><a class="dropdown-item" href="../security/challenges.html">Challenges</a></li>
             </ul>
@@ -188,7 +191,7 @@ footer {
         <!-- About Link -->
         <ul class="navbar-nav navbar-end">
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="../about.html">About</a>
           </li>
         </ul>
       </div>
@@ -197,7 +200,7 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Custom Rules</h1>
+    <h1 align="center">Custom Rules</h1>
     <p>Custom Falco rules are designed to enhance detection coverage for MELI's clusters and workloads, addressing critical security needs. MELI's vast and complex infrastructure demands broader detection across surfaces like filesystem, database, shell, container, users, network, and processes. Default rules alone are not enough. Below, you will find a list of custom rules written to mitigate cybersecurity risks that could impact the organization and are not covered by the vendor's default rules.</p>
   </div>
 
@@ -708,7 +711,7 @@ footer {
 </div>
 
 <!-- Rule 10 -->
-<div class="rule">
+<!-- <div class="rule">
     <img src="../assets/unauthorized-access.png" alt="Imagen de Regla 10">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule10')">
@@ -758,7 +761,7 @@ footer {
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 <!-- Rule 11 -->
@@ -1509,7 +1512,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 </span>
             </div>
             <div class="sub-detail" id="pertinencia29">
-                detecting potential NoSQL injection tools that could exploit database vulnerabilities. It helps mitigate risks such as unauthorized data access, privilege escalation, or data exfiltration, which can compromise the security and integrity of applications within the cluster.
+                Detecting potential NoSQL injection tools that could exploit database vulnerabilities. It helps mitigate risks such as unauthorized data access, privilege escalation, or data exfiltration, which can compromise the security and integrity of applications within the cluster.
             </div>
 
             <div class="sub-section">
