--- a/rules/irt-alert-rules.html
+++ b/rules/irt-alert-rules.html
@@ -92,7 +92,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Falcom4n</a>
+      <a class="navbar-brand" href="../index.html">Falcom4n</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -115,10 +115,10 @@
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
-              <li><a class="dropdown-item" href="irt-alert-rules.html">IRT_Alert Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/irt-alert-rules.html">IRT_Alert Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -126,9 +126,10 @@
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="statistics.html">Statistics</a></li>
-              <li><a class="dropdown-item" href="security-coverage.html">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="../metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="../metrics/maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -136,15 +137,16 @@
               Security
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
-              <li><a class="dropdown-item" href="#">Threats</a></li>
-              <li><a class="dropdown-item" href="#">Bypasses</a></li>
-              <li><a class="dropdown-item" href="#">Challenges</a></li>
+              <li><a class="dropdown-item" href="../security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="../security/workshop.html">Workshop</a></li>
+              <li><a class="dropdown-item" href="../security/bypasses.html">Bypasses</a></li>
+              <li><a class="dropdown-item" href="../security/challenges">Challenges</a></li>
             </ul>
           </li>
         </ul>
         <ul class="navbar-nav navbar-end">
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="../about.html">About</a>
           </li>
         </ul>
       </div>
@@ -153,7 +155,7 @@
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>IRT Alert Rules</h1>
+    <h1 align="center">IRT Alert Rules</h1>
     <p>IRT_Alert rules are those that, due to their high precision (low number of false positives), are tagged to be forwarded to the Incident Response Team (IRT).</p>
   </div>
 
