--- a/rules/vendor-rules.html
+++ b/rules/vendor-rules.html
@@ -34,7 +34,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <!-- Logo -->
-      <a class="navbar-brand" href="#">Falcom4n</a>
+      <a class="navbar-brand" href="../index.html">Falcom4n</a>
 
       <!-- Navbar Toggle -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,8 +53,9 @@
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="#">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="#">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -62,10 +63,10 @@
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
-              <li><a class="dropdown-item" href="irt-alert-rules.html">IRT_Alert Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/irt-alert-rules.html">IRT_Alert Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -73,9 +74,9 @@
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="#">Statistics</a></li>
-              <li><a class="dropdown-item" href="#">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="#">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="../metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="../metrics/maturity.html">Maturity</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -83,9 +84,10 @@
               Security
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
-              <li><a class="dropdown-item" href="#">Threats</a></li>
-              <li><a class="dropdown-item" href="#">Bypasses</a></li>
-              <li><a class="dropdown-item" href="#">Challenges</a></li>
+              <li><a class="dropdown-item" href="../security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="../security/workshop.html">Workshop</a></li>
+              <li><a class="dropdown-item" href="../security/bypasses.html">Bypasses</a></li>
+              <li><a class="dropdown-item" href="../security/challenges.html">Challenges</a></li>
             </ul>
           </li>
         </ul>
@@ -93,7 +95,7 @@
         <!-- About Link -->
         <ul class="navbar-nav navbar-end">
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="../about.html">About</a>
           </li>
         </ul>
       </div>
@@ -102,7 +104,7 @@
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Vendor Rules</h1>
+    <h1 align="center">Vendor Rules</h1>
     <p>Falco comes with a comprehensive set of preconfigured rules for container, host, Kubernetes, and cloud security, with the option to customize your own rules. In the baseline defined for MELI, 38 out of the 75 default rules were integrated to identify risks and common bad practices in containerized environments.</p>
 
     <!-- List of Items -->
