--- a/security/challenges.html
+++ b/security/challenges.html
@@ -120,7 +120,7 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Challenges</h1>
+    <h1 align="center">Challenges</h1>
     <p>Falco challenges refer to the obstacles, limitations, and areas for enhancement associated with the security and implementation of the solution.</p>
   </div>
 
