--- a/security/workshop.html
+++ b/security/workshop.html
@@ -148,13 +148,15 @@ footer {
     <div class="row">
       <div class="col-md-4 scenario">
         <img src="../assets/malware.webp" alt="Scenario 1">
-        <h4>Rootkit infection detection</h4>
+        <!-- <h4>Rootkit infection detection</h4> -->
+        <h4><a href="https://example.com/rootkit-detection" target="_blank" style="text-decoration: none; color: inherit;">Rootkit infection detection</a></h4>
         <h3>2024</h3>
         <p>Detects when sensitive files are accessed outside normal operations.</p>
       </div>
       <div class="col-md-4 scenario">
         <img src="../assets/privilegeEscalation.webp" alt="Scenario 2">
-        <h4>Privilege Escalation on hunting activities</h4>
+        <!-- <h4>Privilege Escalation on hunting activities</h4> -->
+        <h4><a href="https://example.com/privilege-escalation" target="_blank" style="text-decoration: none; color: inherit;">Privilege Escalation on hunting activities</a></h4>
         <h3>2024</h3>
         <p>Identifies attempts to break out of the container environment.</p>
       </div>
