--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -217,7 +217,7 @@
           </div>
           <div>
               <h5>Reglas Third Party</h5>
-              <div class="rule" style="color: orange; font-weight: bold;">⚠️ "No ThirdParty rules were deployed in Q4 due to the number of rules deployed to prevent event drop."</div>
+              <div class="rule" style="color: orange; font-weight: bold;">⚠️"Third-party rules were not deployed in Q4 to prevent event drop."</div>
               <!-- <div class="rule">RCE</div>
               <div class="rule">Regla Third Party 3</div>
               <div class="rule">Regla Third Party 4</div>
