set color to new custom rules

--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -207,13 +207,13 @@
       <div class="rules-list">
           <div>
               <h5>Reglas Custom</h5>
-              <div class="rule">experimental 31 - Arbitrary Host File Access from containers launched by containerd CRI (CVE-2022-23648) [custom]</div>
-              <div class="rule">experimental 32 - Suspicious Resource Exhaustion Command Detection (CVE-2022-31030) [custom]</div>
-              <div class="rule">experimental 33 - File Made Inmutable inside a Container [custom]</div>
-              <div class="rule">experimental 34 - Memory Swap modification inside a Container  [custom]</div>
-              <div class="rule">experimental 35 - Command chaining patterns via pipe [custom]</div>
-              <div class="rule">experimental 36 - Suspicious Mining Process Creation Event [custom]</div>
-              <div class="rule">experimental 37 - Suspicious Memory Grep Activity [custom]</div>
+              <div class="rule" style="color: green; font-weight: bold;">🆕 experimental 31 - Arbitrary Host File Access from containers launched by containerd CRI (CVE-2022-23648) [custom]</div>
+              <div class="rule" style="color: green; font-weight: bold;">🆕 experimental 32 - Suspicious Resource Exhaustion Command Detection (CVE-2022-31030) [custom]</div>
+              <div class="rule" style="color: green; font-weight: bold;">🆕 experimental 33 - File Made Inmutable inside a Container [custom]</div>
+              <div class="rule" style="color: green; font-weight: bold;">🆕 experimental 34 - Memory Swap modification inside a Container [custom]</div>
+              <div class="rule" style="color: green; font-weight: bold;">🆕 experimental 35 - Command chaining patterns via pipe [custom]</div>
+              <div class="rule" style="color: green; font-weight: bold;">🆕 experimental 36 - Suspicious Mining Process Creation Event [custom]</div>
+              <div class="rule" style="color: green; font-weight: bold;">🆕 experimental 37 - Suspicious Memory Grep Activity [custom]</div>
           </div>
           <div>
               <h5>Reglas Third Party</h5>
